# MinecraftProfileManager

./: COMPILE.txt  Cargo.toml  MPM.spec  MinecraftPlayProfiles.json  PlanWithChat.md  README.md  run_settings.cfg  sbbgsag.json  t.json  ui_interface.spec
OLD_FILES/: MinecraftPlayProfiles.json
OLD_FILES/PythonFiles/: DirectoryManager.py  ProfileJSONManager.py  write_settings.py
OLD_FILES/WindowsScripts/: ProfileManager.bat  RunMinecraft.bat  ask_install_python.vbs
OS_Scripts/: RunMinecraft.bat
PythonFiles/: DirectoryManager.py  ProgramPaths.json  auto_click_play.py  run_settings.cfg  ui_interface.py  write_settings.py
Random/: TODO.txt
WindowsScripts/: RunMinecraft.bat
src/: data_handler.rs  ext_app_handler.rs  file_handler.rs  main.rs  path_handler.rs  ui.rs
